src/Pages/Components/TaskManager.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap');
@import "tailwindcss";

body {
  font-family: 'Poppins', sans-serif;
    height: 100vh;
    margin: 0;
    background-image: linear-gradient(#eeefef 0.5px, transparent 0.5px, transparent calc(100% - 0.5px), #eeefef calc(100% - 0.5px)), linear-gradient(90deg, #eeefef 0.5px, transparent 0.5px, transparent calc(100% - 0.5px), #eeefef calc(100% - 0.5px));
    background-size: 40px 40px;
    background-color: #ffffff;
    border: 0.5px solid #eeefef;
}
  
  /* TASK LIST */
  .task-list-container {
    margin-left: 270px;
    background: linear-gradient(#C1E5FB, #E5EDF2);
    border-radius: 10px;
    max-height: 65vh;
    overflow-y: auto
  }
  
  .task-list-container ul {
    display: flex;
    flex-direction: column;  
    gap: 10px; 
    padding: 0;
  }
  
  .task-list-container li {
    padding: 4px 10px;
    background-color: #ffffff;
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
  }

/* TASK FORM */
.task-form-container {
  margin-bottom: 70px;
  background: linear-gradient(#C1E5FB, #E5EDF2);
  border-radius: 10px;
}

